samples/_failures_safe/1761785332_a8901a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c105e098.c: In function ‘main’:
./samples/SAFE/__tmp_c105e098.c:157:20: error: missing terminating " character
  157 |             printf("Invalid edge parameters. Nodes must be
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c105e098.c:157:13: error: expected expression at end of input
  157 |             printf("Invalid edge parameters. Nodes must be
      |             ^~~~~~
./samples/SAFE/__tmp_c105e098.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c105e098.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c105e098.c:157:13: error: expected declaration or statement at end of input
